fix(scroll): fixed scroll on iOS mobile

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -4,6 +4,11 @@
 .layout {
   display: flex;
   height: 100vh;
+
+  @include tablet {
+    min-height: 100vh;
+    height: unset;
+  }
 }
 
 .content {
